// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserDailyActivity renders corectly when range is invalid 1`] = `
<UserDailyActivity
  apiUrl="barfoo"
  range="invalid_range"
  user={
    Object {
      "name": "foobar",
    }
  }
>
  <ForwardRef
    className="user-stats-card"
  >
    <div
      className="card user-stats-card"
    >
      <div
        className="row"
      >
        <div
          className="col-xs-10"
        >
          <h3
            className="capitalize-bold"
            style={
              Object {
                "marginLeft": 20,
              }
            }
          >
            Daily Activity
          </h3>
        </div>
        <div
          className="col-xs-2 text-right"
        >
          <h4
            style={
              Object {
                "marginTop": 20,
              }
            }
          >
            <a
              href="#daily-activity"
            >
              <FontAwesomeIcon
                beat={false}
                beatFade={false}
                border={false}
                bounce={false}
                className=""
                color="#000"
                fade={false}
                fixedWidth={false}
                flip={false}
                icon={
                  Object {
                    "icon": Array [
                      640,
                      512,
                      Array [
                        128279,
                        "chain",
                      ],
                      "f0c1",
                      "M579.8 267.7c56.5-56.5 56.5-148 0-204.5c-50-50-128.8-56.5-186.3-15.4l-1.6 1.1c-14.4 10.3-17.7 30.3-7.4 44.6s30.3 17.7 44.6 7.4l1.6-1.1c32.1-22.9 76-19.3 103.8 8.6c31.5 31.5 31.5 82.5 0 114L422.3 334.8c-31.5 31.5-82.5 31.5-114 0c-27.9-27.9-31.5-71.8-8.6-103.8l1.1-1.6c10.3-14.4 6.9-34.4-7.4-44.6s-34.4-6.9-44.6 7.4l-1.1 1.6C206.5 251.2 213 330 263 380c56.5 56.5 148 56.5 204.5 0L579.8 267.7zM60.2 244.3c-56.5 56.5-56.5 148 0 204.5c50 50 128.8 56.5 186.3 15.4l1.6-1.1c14.4-10.3 17.7-30.3 7.4-44.6s-30.3-17.7-44.6-7.4l-1.6 1.1c-32.1 22.9-76 19.3-103.8-8.6C74 372 74 321 105.5 289.5L217.7 177.2c31.5-31.5 82.5-31.5 114 0c27.9 27.9 31.5 71.8 8.6 103.9l-1.1 1.6c-10.3 14.4-6.9 34.4 7.4 44.6s34.4 6.9 44.6-7.4l1.1-1.6C433.5 260.8 427 182 377 132c-56.5-56.5-148-56.5-204.5 0L60.2 244.3z",
                    ],
                    "iconName": "link",
                    "prefix": "fas",
                  }
                }
                inverse={false}
                listItem={false}
                mask={null}
                maskId={null}
                pull={null}
                pulse={false}
                rotation={null}
                shake={false}
                size="sm"
                spin={false}
                spinPulse={false}
                spinReverse={false}
                style={
                  Object {
                    "marginRight": 20,
                  }
                }
                swapOpacity={false}
                symbol={false}
                title=""
                titleId={null}
                transform={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-link fa-sm "
                  color="#000"
                  data-icon="link"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={
                    Object {
                      "marginRight": 20,
                    }
                  }
                  viewBox="0 0 640 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M579.8 267.7c56.5-56.5 56.5-148 0-204.5c-50-50-128.8-56.5-186.3-15.4l-1.6 1.1c-14.4 10.3-17.7 30.3-7.4 44.6s30.3 17.7 44.6 7.4l1.6-1.1c32.1-22.9 76-19.3 103.8 8.6c31.5 31.5 31.5 82.5 0 114L422.3 334.8c-31.5 31.5-82.5 31.5-114 0c-27.9-27.9-31.5-71.8-8.6-103.8l1.1-1.6c10.3-14.4 6.9-34.4-7.4-44.6s-34.4-6.9-44.6 7.4l-1.1 1.6C206.5 251.2 213 330 263 380c56.5 56.5 148 56.5 204.5 0L579.8 267.7zM60.2 244.3c-56.5 56.5-56.5 148 0 204.5c50 50 128.8 56.5 186.3 15.4l1.6-1.1c14.4-10.3 17.7-30.3 7.4-44.6s-30.3-17.7-44.6-7.4l-1.6 1.1c-32.1 22.9-76 19.3-103.8-8.6C74 372 74 321 105.5 289.5L217.7 177.2c31.5-31.5 82.5-31.5 114 0c27.9 27.9 31.5 71.8 8.6 103.9l-1.1 1.6c-10.3 14.4-6.9 34.4 7.4 44.6s34.4 6.9 44.6-7.4l1.1-1.6C433.5 260.8 427 182 377 132c-56.5-56.5-148-56.5-204.5 0L60.2 244.3z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </FontAwesomeIcon>
            </a>
          </h4>
        </div>
      </div>
      <Loader
        isLoading={false}
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "justifyContent": "center",
              "minHeight": "inherit",
            }
          }
        >
          <span
            style={
              Object {
                "fontSize": 24,
              }
            }
          >
            <FontAwesomeIcon
              beat={false}
              beatFade={false}
              border={false}
              bounce={false}
              className=""
              fade={false}
              fixedWidth={false}
              flip={false}
              icon={
                Object {
                  "icon": Array [
                    512,
                    512,
                    Array [
                      "exclamation-circle",
                    ],
                    "f06a",
                    "M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zm0-384c13.3 0 24 10.7 24 24V264c0 13.3-10.7 24-24 24s-24-10.7-24-24V152c0-13.3 10.7-24 24-24zM224 352a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z",
                  ],
                  "iconName": "circle-exclamation",
                  "prefix": "fas",
                }
              }
              inverse={false}
              listItem={false}
              mask={null}
              maskId={null}
              pull={null}
              pulse={false}
              rotation={null}
              shake={false}
              size={null}
              spin={false}
              spinPulse={false}
              spinReverse={false}
              swapOpacity={false}
              symbol={false}
              title=""
              titleId={null}
              transform={null}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-circle-exclamation "
                data-icon="circle-exclamation"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zm0-384c13.3 0 24 10.7 24 24V264c0 13.3-10.7 24-24 24s-24-10.7-24-24V152c0-13.3 10.7-24 24-24zM224 352a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </FontAwesomeIcon>
             
            Invalid range: invalid_range
          </span>
        </div>
      </Loader>
    </div>
  </ForwardRef>
</UserDailyActivity>
`;

exports[`UserDailyActivity renders correctly 1`] = `
<ForwardRef
  className="user-stats-card"
>
  <div
    className="row"
  >
    <div
      className="col-xs-10"
    >
      <h3
        className="capitalize-bold"
        style={
          Object {
            "marginLeft": 20,
          }
        }
      >
        Daily Activity
      </h3>
    </div>
    <div
      className="col-xs-2 text-right"
    >
      <h4
        style={
          Object {
            "marginTop": 20,
          }
        }
      >
        <a
          href="#daily-activity"
        >
          <FontAwesomeIcon
            beat={false}
            beatFade={false}
            border={false}
            bounce={false}
            className=""
            color="#000"
            fade={false}
            fixedWidth={false}
            flip={false}
            icon={
              Object {
                "icon": Array [
                  640,
                  512,
                  Array [
                    128279,
                    "chain",
                  ],
                  "f0c1",
                  "M579.8 267.7c56.5-56.5 56.5-148 0-204.5c-50-50-128.8-56.5-186.3-15.4l-1.6 1.1c-14.4 10.3-17.7 30.3-7.4 44.6s30.3 17.7 44.6 7.4l1.6-1.1c32.1-22.9 76-19.3 103.8 8.6c31.5 31.5 31.5 82.5 0 114L422.3 334.8c-31.5 31.5-82.5 31.5-114 0c-27.9-27.9-31.5-71.8-8.6-103.8l1.1-1.6c10.3-14.4 6.9-34.4-7.4-44.6s-34.4-6.9-44.6 7.4l-1.1 1.6C206.5 251.2 213 330 263 380c56.5 56.5 148 56.5 204.5 0L579.8 267.7zM60.2 244.3c-56.5 56.5-56.5 148 0 204.5c50 50 128.8 56.5 186.3 15.4l1.6-1.1c14.4-10.3 17.7-30.3 7.4-44.6s-30.3-17.7-44.6-7.4l-1.6 1.1c-32.1 22.9-76 19.3-103.8-8.6C74 372 74 321 105.5 289.5L217.7 177.2c31.5-31.5 82.5-31.5 114 0c27.9 27.9 31.5 71.8 8.6 103.9l-1.1 1.6c-10.3 14.4-6.9 34.4 7.4 44.6s34.4 6.9 44.6-7.4l1.1-1.6C433.5 260.8 427 182 377 132c-56.5-56.5-148-56.5-204.5 0L60.2 244.3z",
                ],
                "iconName": "link",
                "prefix": "fas",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            maskId={null}
            pull={null}
            pulse={false}
            rotation={null}
            shake={false}
            size="sm"
            spin={false}
            spinPulse={false}
            spinReverse={false}
            style={
              Object {
                "marginRight": 20,
              }
            }
            swapOpacity={false}
            symbol={false}
            title=""
            titleId={null}
            transform={null}
          />
        </a>
      </h4>
    </div>
  </div>
  <Loader
    isLoading={false}
  >
    <div
      className="row"
    >
      <div
        className="col-xs-12"
      >
        <Heatmap
          data={
            Array [
              Object {
                "data": Array [
                  Object {
                    "x": 0,
                    "y": 16,
                  },
                  Object {
                    "x": 1,
                    "y": 8,
                  },
                  Object {
                    "x": 2,
                    "y": 1,
                  },
                  Object {
                    "x": 3,
                    "y": 0,
                  },
                  Object {
                    "x": 4,
                    "y": 0,
                  },
                  Object {
                    "x": 5,
                    "y": 0,
                  },
                  Object {
                    "x": 6,
                    "y": 0,
                  },
                  Object {
                    "x": 7,
                    "y": 5,
                  },
                  Object {
                    "x": 8,
                    "y": 20,
                  },
                  Object {
                    "x": 9,
                    "y": 25,
                  },
                  Object {
                    "x": 10,
                    "y": 39,
                  },
                  Object {
                    "x": 11,
                    "y": 51,
                  },
                  Object {
                    "x": 12,
                    "y": 59,
                  },
                  Object {
                    "x": 13,
                    "y": 33,
                  },
                  Object {
                    "x": 14,
                    "y": 34,
                  },
                  Object {
                    "x": 15,
                    "y": 39,
                  },
                  Object {
                    "x": 16,
                    "y": 60,
                  },
                  Object {
                    "x": 17,
                    "y": 68,
                  },
                  Object {
                    "x": 18,
                    "y": 39,
                  },
                  Object {
                    "x": 19,
                    "y": 51,
                  },
                  Object {
                    "x": 20,
                    "y": 32,
                  },
                  Object {
                    "x": 21,
                    "y": 50,
                  },
                  Object {
                    "x": 22,
                    "y": 37,
                  },
                  Object {
                    "x": 23,
                    "y": 26,
                  },
                ],
                "id": "Average",
              },
              Object {
                "data": Array [
                  Object {
                    "x": 0,
                    "y": 19,
                  },
                  Object {
                    "x": 1,
                    "y": 12,
                  },
                  Object {
                    "x": 2,
                    "y": 2,
                  },
                  Object {
                    "x": 3,
                    "y": 0,
                  },
                  Object {
                    "x": 4,
                    "y": 0,
                  },
                  Object {
                    "x": 5,
                    "y": 0,
                  },
                  Object {
                    "x": 6,
                    "y": 0,
                  },
                  Object {
                    "x": 7,
                    "y": 1,
                  },
                  Object {
                    "x": 8,
                    "y": 35,
                  },
                  Object {
                    "x": 9,
                    "y": 36,
                  },
                  Object {
                    "x": 10,
                    "y": 56,
                  },
                  Object {
                    "x": 11,
                    "y": 60,
                  },
                  Object {
                    "x": 12,
                    "y": 71,
                  },
                  Object {
                    "x": 13,
                    "y": 42,
                  },
                  Object {
                    "x": 14,
                    "y": 30,
                  },
                  Object {
                    "x": 15,
                    "y": 46,
                  },
                  Object {
                    "x": 16,
                    "y": 72,
                  },
                  Object {
                    "x": 17,
                    "y": 52,
                  },
                  Object {
                    "x": 18,
                    "y": 41,
                  },
                  Object {
                    "x": 19,
                    "y": 58,
                  },
                  Object {
                    "x": 20,
                    "y": 37,
                  },
                  Object {
                    "x": 21,
                    "y": 63,
                  },
                  Object {
                    "x": 22,
                    "y": 48,
                  },
                  Object {
                    "x": 23,
                    "y": 32,
                  },
                ],
                "id": "Monday",
              },
              Object {
                "data": Array [
                  Object {
                    "x": 0,
                    "y": 19,
                  },
                  Object {
                    "x": 1,
                    "y": 8,
                  },
                  Object {
                    "x": 2,
                    "y": 0,
                  },
                  Object {
                    "x": 3,
                    "y": 0,
                  },
                  Object {
                    "x": 4,
                    "y": 0,
                  },
                  Object {
                    "x": 5,
                    "y": 0,
                  },
                  Object {
                    "x": 6,
                    "y": 0,
                  },
                  Object {
                    "x": 7,
                    "y": 0,
                  },
                  Object {
                    "x": 8,
                    "y": 17,
                  },
                  Object {
                    "x": 9,
                    "y": 60,
                  },
                  Object {
                    "x": 10,
                    "y": 50,
                  },
                  Object {
                    "x": 11,
                    "y": 33,
                  },
                  Object {
                    "x": 12,
                    "y": 46,
                  },
                  Object {
                    "x": 13,
                    "y": 33,
                  },
                  Object {
                    "x": 14,
                    "y": 44,
                  },
                  Object {
                    "x": 15,
                    "y": 42,
                  },
                  Object {
                    "x": 16,
                    "y": 67,
                  },
                  Object {
                    "x": 17,
                    "y": 60,
                  },
                  Object {
                    "x": 18,
                    "y": 50,
                  },
                  Object {
                    "x": 19,
                    "y": 56,
                  },
                  Object {
                    "x": 20,
                    "y": 28,
                  },
                  Object {
                    "x": 21,
                    "y": 34,
                  },
                  Object {
                    "x": 22,
                    "y": 47,
                  },
                  Object {
                    "x": 23,
                    "y": 14,
                  },
                ],
                "id": "Tuesday",
              },
              Object {
                "data": Array [
                  Object {
                    "x": 0,
                    "y": 2,
                  },
                  Object {
                    "x": 1,
                    "y": 1,
                  },
                  Object {
                    "x": 2,
                    "y": 0,
                  },
                  Object {
                    "x": 3,
                    "y": 0,
                  },
                  Object {
                    "x": 4,
                    "y": 0,
                  },
                  Object {
                    "x": 5,
                    "y": 0,
                  },
                  Object {
                    "x": 6,
                    "y": 0,
                  },
                  Object {
                    "x": 7,
                    "y": 0,
                  },
                  Object {
                    "x": 8,
                    "y": 29,
                  },
                  Object {
                    "x": 9,
                    "y": 20,
                  },
                  Object {
                    "x": 10,
                    "y": 45,
                  },
                  Object {
                    "x": 11,
                    "y": 47,
                  },
                  Object {
                    "x": 12,
                    "y": 82,
                  },
                  Object {
                    "x": 13,
                    "y": 45,
                  },
                  Object {
                    "x": 14,
                    "y": 14,
                  },
                  Object {
                    "x": 15,
                    "y": 37,
                  },
                  Object {
                    "x": 16,
                    "y": 52,
                  },
                  Object {
                    "x": 17,
                    "y": 64,
                  },
                  Object {
                    "x": 18,
                    "y": 54,
                  },
                  Object {
                    "x": 19,
                    "y": 63,
                  },
                  Object {
                    "x": 20,
                    "y": 29,
                  },
                  Object {
                    "x": 21,
                    "y": 56,
                  },
                  Object {
                    "x": 22,
                    "y": 26,
                  },
                  Object {
                    "x": 23,
                    "y": 30,
                  },
                ],
                "id": "Wednesday",
              },
              Object {
                "data": Array [
                  Object {
                    "x": 0,
                    "y": 28,
                  },
                  Object {
                    "x": 1,
                    "y": 7,
                  },
                  Object {
                    "x": 2,
                    "y": 0,
                  },
                  Object {
                    "x": 3,
                    "y": 0,
                  },
                  Object {
                    "x": 4,
                    "y": 0,
                  },
                  Object {
                    "x": 5,
                    "y": 0,
                  },
                  Object {
                    "x": 6,
                    "y": 0,
                  },
                  Object {
                    "x": 7,
                    "y": 16,
                  },
                  Object {
                    "x": 8,
                    "y": 16,
                  },
                  Object {
                    "x": 9,
                    "y": 17,
                  },
                  Object {
                    "x": 10,
                    "y": 14,
                  },
                  Object {
                    "x": 11,
                    "y": 62,
                  },
                  Object {
                    "x": 12,
                    "y": 85,
                  },
                  Object {
                    "x": 13,
                    "y": 21,
                  },
                  Object {
                    "x": 14,
                    "y": 45,
                  },
                  Object {
                    "x": 15,
                    "y": 57,
                  },
                  Object {
                    "x": 16,
                    "y": 84,
                  },
                  Object {
                    "x": 17,
                    "y": 79,
                  },
                  Object {
                    "x": 18,
                    "y": 29,
                  },
                  Object {
                    "x": 19,
                    "y": 50,
                  },
                  Object {
                    "x": 20,
                    "y": 33,
                  },
                  Object {
                    "x": 21,
                    "y": 57,
                  },
                  Object {
                    "x": 22,
                    "y": 33,
                  },
                  Object {
                    "x": 23,
                    "y": 21,
                  },
                ],
                "id": "Thursday",
              },
              Object {
                "data": Array [
                  Object {
                    "x": 0,
                    "y": 8,
                  },
                  Object {
                    "x": 1,
                    "y": 15,
                  },
                  Object {
                    "x": 2,
                    "y": 1,
                  },
                  Object {
                    "x": 3,
                    "y": 0,
                  },
                  Object {
                    "x": 4,
                    "y": 0,
                  },
                  Object {
                    "x": 5,
                    "y": 0,
                  },
                  Object {
                    "x": 6,
                    "y": 0,
                  },
                  Object {
                    "x": 7,
                    "y": 5,
                  },
                  Object {
                    "x": 8,
                    "y": 30,
                  },
                  Object {
                    "x": 9,
                    "y": 30,
                  },
                  Object {
                    "x": 10,
                    "y": 53,
                  },
                  Object {
                    "x": 11,
                    "y": 57,
                  },
                  Object {
                    "x": 12,
                    "y": 39,
                  },
                  Object {
                    "x": 13,
                    "y": 31,
                  },
                  Object {
                    "x": 14,
                    "y": 48,
                  },
                  Object {
                    "x": 15,
                    "y": 45,
                  },
                  Object {
                    "x": 16,
                    "y": 79,
                  },
                  Object {
                    "x": 17,
                    "y": 133,
                  },
                  Object {
                    "x": 18,
                    "y": 56,
                  },
                  Object {
                    "x": 19,
                    "y": 39,
                  },
                  Object {
                    "x": 20,
                    "y": 31,
                  },
                  Object {
                    "x": 21,
                    "y": 43,
                  },
                  Object {
                    "x": 22,
                    "y": 51,
                  },
                  Object {
                    "x": 23,
                    "y": 26,
                  },
                ],
                "id": "Friday",
              },
              Object {
                "data": Array [
                  Object {
                    "x": 0,
                    "y": 20,
                  },
                  Object {
                    "x": 1,
                    "y": 12,
                  },
                  Object {
                    "x": 2,
                    "y": 1,
                  },
                  Object {
                    "x": 3,
                    "y": 0,
                  },
                  Object {
                    "x": 4,
                    "y": 0,
                  },
                  Object {
                    "x": 5,
                    "y": 0,
                  },
                  Object {
                    "x": 6,
                    "y": 0,
                  },
                  Object {
                    "x": 7,
                    "y": 0,
                  },
                  Object {
                    "x": 8,
                    "y": 7,
                  },
                  Object {
                    "x": 9,
                    "y": 11,
                  },
                  Object {
                    "x": 10,
                    "y": 26,
                  },
                  Object {
                    "x": 11,
                    "y": 44,
                  },
                  Object {
                    "x": 12,
                    "y": 56,
                  },
                  Object {
                    "x": 13,
                    "y": 29,
                  },
                  Object {
                    "x": 14,
                    "y": 28,
                  },
                  Object {
                    "x": 15,
                    "y": 23,
                  },
                  Object {
                    "x": 16,
                    "y": 25,
                  },
                  Object {
                    "x": 17,
                    "y": 55,
                  },
                  Object {
                    "x": 18,
                    "y": 18,
                  },
                  Object {
                    "x": 19,
                    "y": 57,
                  },
                  Object {
                    "x": 20,
                    "y": 37,
                  },
                  Object {
                    "x": 21,
                    "y": 80,
                  },
                  Object {
                    "x": 22,
                    "y": 29,
                  },
                  Object {
                    "x": 23,
                    "y": 22,
                  },
                ],
                "id": "Saturday",
              },
              Object {
                "data": Array [
                  Object {
                    "x": 0,
                    "y": 10,
                  },
                  Object {
                    "x": 1,
                    "y": 0,
                  },
                  Object {
                    "x": 2,
                    "y": 0,
                  },
                  Object {
                    "x": 3,
                    "y": 0,
                  },
                  Object {
                    "x": 4,
                    "y": 0,
                  },
                  Object {
                    "x": 5,
                    "y": 0,
                  },
                  Object {
                    "x": 6,
                    "y": 0,
                  },
                  Object {
                    "x": 7,
                    "y": 8,
                  },
                  Object {
                    "x": 8,
                    "y": 2,
                  },
                  Object {
                    "x": 9,
                    "y": 0,
                  },
                  Object {
                    "x": 10,
                    "y": 26,
                  },
                  Object {
                    "x": 11,
                    "y": 52,
                  },
                  Object {
                    "x": 12,
                    "y": 30,
                  },
                  Object {
                    "x": 13,
                    "y": 24,
                  },
                  Object {
                    "x": 14,
                    "y": 25,
                  },
                  Object {
                    "x": 15,
                    "y": 17,
                  },
                  Object {
                    "x": 16,
                    "y": 36,
                  },
                  Object {
                    "x": 17,
                    "y": 30,
                  },
                  Object {
                    "x": 18,
                    "y": 24,
                  },
                  Object {
                    "x": 19,
                    "y": 29,
                  },
                  Object {
                    "x": 20,
                    "y": 28,
                  },
                  Object {
                    "x": 21,
                    "y": 16,
                  },
                  Object {
                    "x": 22,
                    "y": 24,
                  },
                  Object {
                    "x": 23,
                    "y": 35,
                  },
                ],
                "id": "Sunday",
              },
            ]
          }
        />
      </div>
    </div>
  </Loader>
</ForwardRef>
`;
